alert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert
  labels:
    name: prometheus
  annotations: 
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: alert.minikube.url
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: alertmanager-operated
            port: 
              number: 9093
  # - host: prom.minikube.url
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: /
  #       backend:
  #         service:
  #           name: prometheus-kube-prometheus-prometheus
  #           port: 
  #             number: 9090
