prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  labels:
    name: prometheus
  annotations: 
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: monit.minikube.url
    http:
      paths:
      - pathType: Prefix
        path: /(.+)
        backend:
          service:
            name: prometheus-grafana
            port: 
              number: 80
      - pathType: Prefix
        path: /(.+)
        backend:
          service:
            name: alertmanager-operated
            port: 
              number: 9093
      - pathType: Prefix
        path: /graph/(.+)
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port: 
              number: 9090
